files/app-load-balancer.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: nginx-deploy
  name: nginx-deploy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deploy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx-deploy
    spec:
      containers:
      - image: nginx
        name: nginx

---

apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: nginx-svc
  name: nginx-svc
spec:
  ports:
  - name: 31984-80
    port: 31984
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-deploy
  type: NodePort

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    # Specify the IngressClass that the AWS Load Balancer Controller manages
    kubernetes.io/ingress.class: alb
    # Specify the name of the ALB
    alb.ingress.kubernetes.io/load-balancer-name: my-application-alb
    # Set the target type for the ALB's target groups to 'ip'
    alb.ingress.kubernetes.io/target-type: ip
    # Define the ALB scheme (internet-facing or internal)
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Configure health checks for the target group
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: '80'
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
